config/deploy/k8s/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-deployment
  labels:
    app: sidekiq
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
        type: rails
    spec:
      containers:
      - name: spree-web
        image: spree-web:v201802082
        command: ['/bin/sh']
        args: ['-c', 'bundle exec sidekiq']
        volumeMounts:
        - mountPath: '/bundle'
          name: storage
          subPath: bundles
        - mountPath: '/app/public'
          name: storage
          subPath: assets
        - mountPath: '/app/logs'
          name: storage
          subPath: logs
        - mountPath: '/app/tmp/uploads'
          name: storage
          subPath: uploads

      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: pv-claim
