config/deploy/k8s/db-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:10.1-alpine
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: '/var/lib/postgresql/data'
          name: storage
          subPath: pg
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: pv-claim
