config/deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: web-service
    servicePort: 8080
